Handle powermock warnings when testing with java >= 11